# CeNTREX-TlF

./: IMPLEMENTATION_AUDIT.md  IMPROVEMENTS.md  LINDBLAD_TERMINATION_EVENTS_PLAN.md  ODE_HELPER_FUNCTION_COMPARISON.md  README.md  README_OBE_SOLVER.md  RUST_HAMILTONIAN_REVIEW.md  pyproject.toml  rust_obe_rhs_solver_roadmap.md
.github/workflows/: release.yml  test.yml
benchmarks/: bench_effective_batch_vs_python.py  bench_effective_sparsity.py  bench_pchip_precompute.py  bench_q1_timedep_methods.py  bench_sparse_vs_dense.py  bench_square_wave.py  benchmark_julia_comparison.py  benchmark_obe.py  debug_batch_minimal.py  debug_batch_slots.py  debug_effective_plan.py  debug_effective_rhs.py  debug_effective_rhs2.py  debug_euler_step.py  debug_matrix_method.py  debug_q1_states.py  debug_rust_rhs.py  debug_rwa.py  debug_rwa_detailed.py  debug_rwa_full.py  debug_rwa_multipol.py  profile_bdf.py  profile_bdf_detailed.py  profile_diffsol.py  profile_rhs.py  profile_scipy_overhead.py  profile_sparsity.py  test_bdf_quick.py  test_effective_lindblad_batch.py  test_effective_lindblad_batch2.py  test_effective_lindblad_rust.py  test_expression_in_python_solver.py  test_her2k.py  test_instruction_op_ids.py  test_lindblad_params_in_solver.py  test_new_helpers.py  test_output_parity.py  test_pchip_helper.py  test_runtime_expression_eval.py  validate_effective_lindblad_timedep.py
centrex_TlF/couplings/: branching.py  transition.py  utils.py  utils_compact.py
centrex_TlF/hamiltonian/: B_uncoupled.py  basis_transformations.py  generate_hamiltonian.py  utils.py
centrex_TlF/lindblad/: generate_hamiltonian.py  utils_decay.py
centrex_TlF/states/: find_states.py  generate_states.py
centrex_TlF/transitions/: transition.py
centrex_tlf/: __init__.py
centrex_tlf/constants/: constants.py
centrex_tlf/couplings/: __init__.py  branching.py  collapse.py  coupling_matrix.py  matrix_elements.py  polarization.py  transition.py  utils.py  utils_compact.py
centrex_tlf/effective_hamiltonian/: __init__.py  _alignment.py  _decay.py  _embedding.py  _superoperators.py  _utility.py  compact_reference.py  initial_state.py  models.py  observables.py  operator_bundle.py  preparation.py  rust_plan.py  solve.py
centrex_tlf/hamiltonian/: B_coupled.py  B_uncoupled.py  X_uncoupled.py  __init__.py  basis_transformations.py  constants.py  dark_bright.py  general_uncoupled.py  generate_hamiltonian.py  matrix_elements.py  matrix_elements_electric_dipole.py  matrix_elements_electric_quadrupole.py  quantum_operators.py  reduced_hamiltonian.py  utils.py  wigner.py
centrex_tlf/lindblad/: __init__.py  batch.py  events.py  generate_hamiltonian.py  generate_system_of_equations.py  helper_functions.py  ir.py  parameters.py  plan_static.py  reference_dense.py  solve.py  state_layout.py  utils.py  utils_compact.py  utils_decay.py  utils_setup.py
centrex_tlf/states/: __init__.py  find_states.py  generate_states.py  population.py  states.py  utils.py  utils_compact.py
centrex_tlf/transitions/: transition.py
centrex_tlf/utils/: __init__.py  detuning.py  multipass.py  phase_modulation.py  plotting.py  population.py  rabi.py
examples/: dissipator_code.f90  profile.prof  profiling_Hreduced.ipynb  test_new_ode_solver.ipynb
examples/couplings/: branching_ratios.ipynb  generate coupling field.ipynb
examples/effective hamiltonian/: benchmark_q1_effective_hamiltonian.py  effective_hamiltonian_improvement_plan.md  effective_hamiltonian_lindblad_safe_notebook_plan.md  effective_hamiltonian_overview.md  effective_hamiltonian_runtime.py  effective_system_example.ipynb  energy_levels_J1.ipynb  fixed_basis_rust_solver_plan.md  local_reference_patch_plan.md  q1_effective_hamiltonian_status.md  q1_f1_1o2_f0_static_vs_oscillating_photon_emission.ipynb  q1_fixed_basis_compact_interpolated_lindblad_safe.ipynb  q1_instantaneous_basis_static_and_oscillating.ipynb  system_example.ipynb  (+10 more)
rust/: Cargo.toml
rust/src/: B_coupled.rs  X_uncoupled.rs  b_coupled.rs  constants.rs  coupling.rs  generate_hamiltonian.rs  lib.rs  quantum_operators.rs  states.rs  wigner.rs  x_uncoupled.rs
rust/src/effective_lindblad/: mod.rs  plan.rs  python_api.rs  rhs.rs  solver.rs
rust/src/lindblad/: blas.rs  eval.rs  layout.rs  mod.rs  ode_batch.rs  ode_impl.rs  plan.rs  python_api.rs  rhs.rs  solver.rs  solver_batch.rs  solver_bdf.rs  solver_dopri5_fast.rs  solver_fast_common.rs  solver_ode.rs  solver_stats.rs  solver_tsit5_fast.rs
rust/src/ode/: batch.rs  common.rs  dopri5.rs  mod.rs  output.rs  tsit5.rs
tests/: test_constants.py  test_transitions.py
(+126 files in other folders)
