[project]
name = "centrex-tlf"
version = "0.1.6"
description = ""
authors = [
    {name = "ograsdijk", email = "o.grasdijk@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=2",
    "scipy>=1.13",
    "sympy>=1.13.2",
    "pandas>=2",
    "typing_extensions>=4.12.2",
]

[project.urls]
Repository = "https://github.com/ograsdijk/CeNTREX-TlF"

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "mypy>=0.961",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["centrex_tlf"]

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "sympy",
    "sympy.utilities.iterables",
    "sympy.physics.wigner",
    "sympy.physics.quantum.cg",
    "sympy.matrices.dense"
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.4.1",
    "scipy-stubs>=1.15.3.0",
]
